src/content/docs/ja/sdk/ios/v4/index.mdx
---
title: "iOS SDK連携ガイド"
description: "iOS SDKを使用して、iOSアプリでAdjustの機能にアクセスしましょう。"
category-title: "iOS SDK"
slug: "en/sdk/ios/v4"
sidebar-position: 2
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/ios"
---
Adjust iOS SDKを実装することで、アトリビューションやイベントなどのさまざまなデータをWebアプリで記録できます。このガイドでは、Adjust SDKをアプリに実装する方法を紹介します。

1\. プロジェクトにSDKを追加する \{\#add\-the\-sdk\-to\-your\-project\}
-------------------------------------------------------------------

iOSアプリでAdjust SDKを使うには、Xcodeプロジェクトに追加する必要があります。

Swift Package Managerを使ってSDKを追加するには、以下の手順に従ってください。

1. **File \-\-> Swift Packages \-\-> Add Package Dependency** を選択します。
2. 表示されたボックスに、SDKのGitHubのアドレスを入力します。 `https://github.com/adjust/ios_sdk`
3. **Version** ドロップダウンで、使用したいAdjust SDKのバージョンを選択します。最新のパージョンは[リリースページ](https://github.com/adjust/ios_sdk/releases)からご確認ください。

### その他のインストール方法 \{\#alternative\-installation\-methods\}

<tabs> <tab title="Cocoapods" sync="cocoapods"> 

Cocoapodsを使ってSDKを追加するには、 `Podfile`で使用したいバージョンを指定します。

```text
// Get pod from repository
pod 'Adjust', '~> $IOS_V4_VERSION'

// Get source directly from GitHub
pod 'Adjust', :git => 'https://github.com/adjust/ios_sdk.git', :tag => 'v$IOS_V4_VERSION'
```

アプリでWeb viewを使用している場合は、以下のようにAdjust Web Bridgeを追加します。

```text
pod 'Adjust/WebBridge', '~> $IOS_V4_VERSION'
```

</Tab> <tab title="Carthage" sync="carthage"> 

Carthageを使ってSDKを追加するには、以下を`Cartfile`に追加します。

```text
github "adjust/ios_sdk"
```

</Tab> <tab title="フレームワークとして追加する" sync="framework"> 

Adjust SDKはフレームワークとしてプロジェクトに追加することで実装できます。[リリースページ](https://github.com/adjust/ios_sdk/releases/latest)には、以下がアーカイブされています。

* `AdjustSdkStatic.framework.zip`: iOS 7以前のデバイス向け
* `AdjustSdkDynamic.framework.zip`: iOS 8以降のデバイス向け
* `AdjustSdkTvDynamic.framework.zip`: tvOSアプリ向けのDynamic framework
* `AdjustSdkTvStatic.framework.zip`: tvOSアプリ向けのStatic framework
* `AdjustSdkImDynamic.framework.zip`: iMessageアプリ向けのDynamic framework
* `AdjustSdkWebBridgeDynamic.framework.zip`: Web view向けのDynamic framework

必要なフレームワークを使用して、`Xcode`プロジェクトに追加します。

1. リリースページからアーカイブをダウンロードします。
2. コンピューター上でアーカイブのzipファイルを解凍します。
3. `.framework`フォルダーを`Xcode`プロジェクトにコピーします。

</Tab> </Tabs> 

2\. Adjust SDKを実装する \{\#integrate\-the\-adjust\-sdk\}
------------------------------------------------------------

Adjust SDKを`Xcode`プロジェクトに追加したら、それをアプリで実装する必要があります。
<tabs> <tab title="Cocoapods" sync="cocoapods"> 

プロジェクトファイルに関連するimport statement（インポートステートメント）を追加します。
<tabs> <tab title="Swift" sync="swift"> 

Adjust SDKをインポートするには、以下をbridging headerファイルに追加します。

```objc
#import <Adjust/Adjust.h>
```

Adjust Web Bridgeを使用している場合は、以下をbridging headerファイルに追加します。

```objc
#import "AdjustBridge.h"
```

</Tab> <tab title="Objective-C" sync="objc"> 

Adjust SDKをインポートするには、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <Adjust/Adjust.h>
```

Adjust Web Bridgeを使用している場合は、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import "AdjustBridge.h"
```

</Tab> </Tabs> </Tab> <tab title="Carthage" sync="carthage"> 

プロジェクトファイルに関連するimport statement（インポートステートメント）を追加します。
<tabs> <tab title="Swift" sync="swift"> 

Adjust SDKをインポートするには、以下をbridging headerファイルに追加します。

```objc
#import <Adjust/Adjust.h>
```

Adjust Web Bridgeを使用している場合は、以下をbridging headerファイルに追加します。

```objc
#import <AdjustSdkWebBridge/AdjustBridge.h>
```

tvOSアプリでAdjust SDKを使用している場合は、以下をbridging headerファイルに追加します。

```objc
#import <AdjustSdkTv/Adjust.h>
```

iMessageアプリでAdjust SDKを使用している場合は、以下をbridging headerファイルに追加します。

```objc
#import <AdjustSdkIm/Adjust.h>
```

</Tab> <tab title="Objective-C" sync="objc"> 

Adjust SDKをインポートするには、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdk/Adjust.h>
```

Adjust Web Bridgeを使用している場合は、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdkWebBridge/AdjustBridge.h>
```

tvOSアプリでAdjust SDKを使用している場合は、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdkTv/Adjust.h>
```

iMessageアプリでAdjust SDKを使用している場合は、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdkIm/Adjust.h>
```

</Tab> </Tabs> </Tab> <tab title="フレームワークのインポート" sync="framework"> 

プロジェクトファイルに関連するimport statement（インポートステートメント）を追加します。
<tabs> <tab title="Swift" sync="swift"> 

Adjust SDKをインポートするには、以下をbridging headerファイルに追加します。

```objc
#import <Adjust/Adjust.h>
```

Adjust Web Bridgeを使用している場合は、以下をbridging headerファイルに追加します。

```objc
#import <AdjustSdkWebBridge/AdjustBridge.h>
```

tvOSアプリでAdjust SDKを使用している場合は、以下をbridging headerファイルに追加します。

```objc
#import <AdjustSdkTv/Adjust.h>
```

iMessageアプリでAdjust SDKを使用している場合は、以下をbridging headerファイルに追加します。

```objc
#import <AdjustSdkIm/Adjust.h>
```

</Tab> <tab title="Objective-C" sync="objc"> 

Adjust SDKをインポートするには、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdk/Adjust.h>
```

Adjust Web Bridgeを使用している場合は、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdkWebBridge/AdjustBridge.h>
```

tvOSアプリでAdjust SDKを使用している場合は、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdkTv/Adjust.h>
```

iMessageアプリでAdjust SDKを使用している場合は、以下を`AppDelegate.h`ファイルに追加します。

```objc
#import <AdjustSdkIm/Adjust.h>
```

</Tab> </Tabs> </Tab> </Tabs> 

3\. iOS frameworksを追加する \{\#add\-ios\-frameworks\}
--------------------------------------------------------

Adjust SDKは、特定のデバイス情報にアクセスするためにフレームワークに依存しています。この情報を読み取れるようにするには、フレームワークを追加してそれらを **オプション** として表示します。

|              Framework              |                                     説明                                     |                          注意                          |
|-------------------------------------|----------------------------------------------------------------------------|------------------------------------------------------|
| `AdSupport.framework`               | デバイスのIDFAにアクセスできるようにします。また、iOS 14以前のデバイスでLAT情報にアクセスできるようになります。             | アプリが「子供向け」カテゴリーをターゲットにしている場合、このフレームワークは追加しないでください。   |
| `AdServices.framework`              | ASAアトリビューションを処理します。                                                        |                                                      |
| `StoreKit.framework`                | SKAdNetworkフレームワークにアクセスできるようにします。                                          | iOS14以降のデバイスでAdjust SDKがSKAdNetworkとの通信を処理するために必要です。 |
| `AppTrackingTransparency.framework` | Adjust SDKがユーザーのATT同意ダイアログをラップし、iOS 14以降のデバイスで同意レスポンスにアクセスできるようにするために必要です。 | アプリが「子供向け」カテゴリーをターゲットにしている場合、このフレームワークは追加しないでください。   |
| `WebKit.framework`                  | アプリでWeb viewを使用できるようにします。                                                  | アプリがWeb viewを使用している場合にのみ必要です。                        |

4\. Adjust SDKを初期化する \{\#initialize\-the\-adjust\-sdk\}
--------------------------------------------------------------

Adjust SDKを初期化するには、configオブジェクトを作成する必要があります。このオブジェクトには、Adjust SDKの動作をコントロールする設定オプションが含まれています。最小限の設定を行うために、以下の引数をパスします。

* `appToken`: [アプリトークン](https://help.adjust.com/en/article/app-settings#view-your-app-token)。
* `environment`: SDKを実行したい環境。`ADJEnvironmentSandbox`に設定します。

ConfigオブジェクトでAdjust SDKを初期化：

1. アプリデリゲートの`didFinishLaunching`または`didFinishLaunchingWithOptions`メソッド内のconfigオブジェクトを宣言します。
2. Configオブジェクトの`logLevel`プロパティを`ADJLogLevelVerbose`（verbose）に設定します。デバイス情報を取得するには、verboseロギングを有効化する必要があります。
3. Configオブジェクトを引数として`appDidLaunch`メソッドにパスします。

<tabs> <tab title="Swift" sync="swift"> 

```swift
func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
   let yourAppToken = "{YourAppToken}"
   let environment = ADJEnvironmentSandbox as? String
   let myAdjustConfig = ADJConfig(
       appToken: yourAppToken,
       environment: environment)
   myAdjustConfig?.logLevel = ADJLogLevel.verbose
   // Your code here
   Adjust.appDidLaunch(myAdjustConfig)
   // Your code here
   return true
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "Adjust.h"

- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
   NSString *yourAppToken = @"{YourAppToken}";
   NSString *environment = ADJEnvironmentSandbox;
   *myAdjustConfig = [ADJConfig configWithAppToken:yourAppToken
                                  environment:environment];
   [myAdjustConfig setLogLevel:ADJLogLevelVerbose];
   // Your code here
   [Adjust appDidLaunch:myAdjustConfig];
   // Your code here
   return YES;
}
```

</Tab> </Tabs> 

### iMessageアプリを設定する \{\#set\-up\-your\-imessage\-app\}

<callout type="important"> 

iMessageの拡張機能は、アプリとは異なるバンドル識別子を持ち、別のメモリースペースで実行されます。同じトークンで両方を設定した場合、SDKはミックスデータを返します。AdjustダッシュボードでiMessageアプリ用に別のアプリを作成し、Adjust SDKを初期化する際にそのトークンを使用する必要があります。
</Callout> 

アプリがiMessageをターゲティングしている場合、いくつか追加の設定を行う必要があります。

* ソースからAdjust SDKを追加した場合、`ADJUST_IM=1`プリプロセッサマクロをiMessageプロジェクトの設定に追加してください。
* Adjust SDKをフレームワークとして追加した場合、 **ビルドフェーズ** プロジェクト設定で **新規コピーファイルフェーズ（New Copy Files Phases）** を追加します。`AdjustSdkIm.framework`をフレームワークフォルダーにコピーするように設定してください。

#### セッションを記録する \{\#record\-sessions\}

Adjust SDKはiMessageアプリのiOSシステム通知を受け取りません。アプリがフォアグラウンドに入った、またはフォアグラウンドから離れたことをAdjust SDKに通知するには、`trackSubsessionStart`と`trackSubsessionEnd`メソッドを呼び出す必要があります。

`didBecomeActiveWithConversation:`メソッド内で`trackSubsessionStart`へのコールを追加します。
<tabs> <tab title="Swift" sync="swift"> 

```swift
func didBecomeActive(with conversation: MSConversation) {
    // Called when the extension is about to move from the inactive to active state.
    // This will happen when the extension is about to present UI.
    // Use this method to configure the extension and restore previously stored state.

    Adjust.trackSubsessionStart()
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
-(void)didBecomeActiveWithConversation:(MSConversation *)conversation {
    // Called when the extension is about to move from the inactive to active state.
    // This will happen when the extension is about to present UI.
    // Use this method to configure the extension and restore previously stored state.

    [Adjust trackSubsessionStart];
}
```

</Tab> </Tabs> 

`willResignActiveWithConversation:`メソッド内で`trackSubsessionEnd`へのコールを追加します。
<tabs> <tab title="Swift" sync="swift"> 

```swift
func willResignActive(with conversation: MSConversation) {
    // Called when the extension is about to move from the active to inactive state.
    // This will happen when the user dismisses the extension, changes to a different
    // conversation or quits Messages.

    // Use this method to release shared resources, save user data, invalidate timers,
    // and store enough state information to restore your extension to its current state
    // in case it is terminated later.

    Adjust.trackSubsessionEnd()
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
-(void)willResignActiveWithConversation:(MSConversation *)conversation {
    // Called when the extension is about to move from the active to inactive state.
    // This will happen when the user dismisses the extension, changes to a different
    // conversation or quits Messages.

    // Use this method to release shared resources, save user data, invalidate timers,
    // and store enough state information to restore your extension to its current state
    // in case it is terminated later.

    [Adjust trackSubsessionEnd];
}
```

</Tab> </Tabs> 

### Adjust Web Bridgeを設定する \{\#set\-up\-the\-adjust\-web\-bridge\}

アプリがWeb viewを使用している場合、Adjust Web Bridgeを設定してWeb view内のアクティビティを記録する必要があります。

#### `AdjustBridge`をアプリに実装する \{\#integrate\-adjustbridge\-into\-your\-app\}

プロジェクトナビゲータにて：

1. View Controllerのソースファイルを開きます。
2. ファイルの最上部に`import`ステートメントを追加します。
3. Web View Delegateの`viewDidLoad`または`viewWillAppear`メソッドの`AdjustBridge`に以下のコールを追加します。

<tabs> <tab title="Swift" sync="swift"> 

```swift
func viewWillAppear(_ animated: Bool) {
    let webView = WKWebView(frame: view.bounds)

    // add var adjustBridge: AdjustBridge? on your interface
    adjustBridge.loadWKWebViewBridge(webView)
    // optionally you can add a web view delegate so that you can also capture its events
    // adjustBridge.loadWKWebViewBridge(webView, wkWebViewDelegate: self as? WKNavigationDelegate?);
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "AdjustBridge.h"
// or #import <AdjustSdkWebBridge/AdjustBridge.h>

- (void)viewWillAppear:(BOOL)animated {
    WKWebView *webView = [[WKWebView alloc] initWithFrame:self.view.bounds];

    // add @property (nonatomic, strong) AdjustBridge *adjustBridge; on your interface
    [self.adjustBridge loadWKWebViewBridge:webView];
    // optionally you can add a web view delegate so that you can also capture its events
    // [self.adjustBridge loadWKWebViewBridge:webView wkWebViewDelegate:(id<wknavigationdelegate id="sl-md0000000">)self];
}

// Your code here
```

</Tab> </Tabs> 

これに含まれる`WebViewJavascriptBridge`も利用できます。これを使用するには、`AdjustBridge`インスタンスの`bridgeRegister`プロパティを設定してください。使用方法については、[ライブラリのドキュメント](https://github.com/marcuswestin/WebViewJavascriptBridge#usage)を参照してください。

#### `AdjustBridge`をWeb viewに実装する \{\#integrate\-adjustbridge\-into\-your\-web\-view\}

Web viewでJavascriptを使用するには、bridgeを設定する必要があります。Adjust iOSのWeb bridgeを初期化するには、以下のJavascriptコードを追加してください。
<tabs> <tab title="Javascript" sync="js"> 

```js
function setupWebViewJavascriptBridge(callback) {
   if (window.WebViewJavascriptBridge) {
      return callback(WebViewJavascriptBridge);
   }

   if (window.WVJBCallbacks) {
      return window.WVJBCallbacks.push(callback);
   }

   window.WVJBCallbacks = [callback];

   var WVJBIframe = document.createElement("iframe");
   WVJBIframe.style.display = "none";
   WVJBIframe.src = "https://**bridge_loaded**";
   document.documentElement.appendChild(WVJBIframe);

   setTimeout(function () {
      document.documentElement.removeChild(WVJBIframe);
   }, 0);
}

setupWebViewJavascriptBridge(function (bridge) {
   // Your code here
   var yourAppToken = yourAppToken;
   var environment = AdjustConfig.EnvironmentSandbox;
   var adjustConfig = new AdjustConfig(yourAppToken, environment);
   Adjust.appDidLaunch(adjustConfig);
   // Your code here
});
```

</Tab> </Tabs> 

5\. Adjust SDKを設定する \{\#configure\-the\-adjust\-sdk\}
------------------------------------------------------------

Configオブジェクトと初期化ロジックを追加したら、Adjust SDKを設定してアプリの様々な部分に関する情報を記録することができます。SDKの設定機能と記録機能のガイドを確認し、記録したいデータを正確に設定してください。

6\. Adjust SDKをテストする \{\#test\-the\-adjust\-sdk\}
--------------------------------------------------------

アプリの情報を記録するようにAdjust SDKを設定したら、次はテストを行います。Adjustは、アプリのテストに役立つ[テストコンソール](https://help.adjust.com/en/article/testing-console)と[デバイスAPI](https://help.adjust.com/en/article/device-api)を提供しています。

[テストガイド](https://help.adjust.com/en/article/test-the-adjust-sdk)に従って、Adjustがアプリから想定どおりの値を受け取ることを確認してください。

7\. 本番用にアプリをビルドする \{\#build\-your\-app\-for\-production\}
-----------------------------------------------------------------

テストが終わったら、本番用にアプリをビルドできます。そのためには、configオブジェクトを更新する必要があります。

以下の値を更新します。

* `environment`: `ADJEnvironmentProduction`に設定します。
* `logLevel`: [ログレベル](/en/sdk/ios/configuration#set-your-logging-level)を選択するか、configプロジェクトに`allowSuppressLogLevel`引数をパスしてログを完全に無効化します。

<tabs> <tab title="Swift" sync="swift"> 

```swift
func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
   let yourAppToken = "{YourAppToken}"
   let environment = ADJEnvironmentProduction as? String
   let myAdjustConfig = ADJConfig(
       appToken: yourAppToken,
       environment: environment,
       allowSuppressLogLevel: true)
   myAdjustConfig?.logLevel = ADJLogLevelSuppress
   //...
   Adjust.appDidLaunch(myAdjustConfig)
   //...
   return true
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "Adjust.h"

- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
   NSString *yourAppToken = @"{YourAppToken}";
   NSString *environment = ADJEnvironmentProduction;
   *myAdjustConfig = [ADJConfig configWithAppToken:yourAppToken
                                  environment:environment
                                  allowSuppressLogLevel:YES];
   [myAdjustConfig setLogLevel:ADJLogLevelSuppress];
   //...
   [Adjust appDidLaunch:myAdjustConfig];
   //...
   return YES;
}
```

</Tab> </Tabs> 

`Xcode`のビルドフラグを使用して、debug buildと本番ビルドのどちらを作成するかに応じて、動的に設定を更新することができます。
<tabs> <tab title="Swift" sync="swift"> 

```swift
func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
   let yourAppToken = "{YourAppToken}"

   #if DEBUG
   let environment = ADJEnvironmentSandbox as? String
   let myAdjustConfig = ADJConfig(
       appToken: yourAppToken,
       environment: environment)
   myAdjustConfig?.logLevel = ADJLogLevel.verbose

   #else
   let environment = ADJEnvironmentProduction as? String
   let myAdjustConfig = ADJConfig(
       appToken: yourAppToken,
       environment: environment,
       allowSuppressLogLevel: true)
   myAdjustConfig?.logLevel = ADJLogLevel.suppress
   #endif
   //...
   Adjust.appDidLaunch(myAdjustConfig)
   //...
   return true
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "Adjust.h"

- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
   NSString *yourAppToken = @"{YourAppToken}";

   #if DEBUG
   NSString *environment = ADJEnvironmentSandbox;
   *myAdjustConfig = [ADJConfig configWithAppToken:yourAppToken
                                  environment:environment];
   [myAdjustConfig setLogLevel:ADJLogLevelVerbose];

   #else
   NSString *environment = ADJEnvironmentProduction;
   *myAdjustConfig = [ADJConfig configWithAppToken:yourAppToken
                                  environment:environment
                                  allowSuppressLogLevel:YES];
   [myAdjustConfig setLogLevel:ADJLogLevelSuppress];
   #endif
   //...
   [Adjust appDidLaunch:myAdjustConfig];
   //...
   return YES;
}
```

</Tab> </Tabs>

